# service_auth

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  app.py  config.py  docker-compose.yml  gitlab-ci.yml  gunicorn_config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py
app/models/: accounts.py  api_response.py  base_models.py  invitation.py  ops_admin.py  ops_user.py  permissions.py  service_meta_class.py  sql_invitation.py  user_account_management.py
app/resources/: error_handler.py  utils.py
app/routers/: accounts.py  api_registry.py  ops_admin.py  ops_user.py  user_account_management.py
kubernetes/: deployment.yaml
migrations/: env.py
migrations/scripts/: casbin.sql  create_db.sql  create_schema.sql
migrations/versions/: 4f5ec3f0ac37_added_invitation_table.py  e86797550c26_adding_casbin_table.py
models/: accounts.py  api_response.py  ops_admin.py  ops_user.py  service_meta_class.py  user_account_management.py
module_authorization/: authconfig.py  policy.py
module_keycloak/: keycloak_users.py  ops_admin.py  ops_user.py
resources/: decorator.py  error_handler.py  utils.py
services/data_providers/: ldap_client.py  neo4j_client.py
services/logger_services/: namespace_declare.py
services/notifier_services/: email_service.py
templates/: reset_password.html  reset_username.html
test/: admin_test.py  user_test.py
tests/: conftest.py  logger.py  prepare_test.py  pytest.ini  test_account.py  test_admin.py  test_requirements.txt  test_reset.py  test_user.py  test_user_account_management.py
users/: __init__.py  accounts.py  api_registry.py  models.py  ops_admin.py  ops_reset.py  ops_user.py  user_account_management.py
(+13 files in other folders)
